# khetsaathi

./: .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted--Gemini-said-The-transition-to-Python-for-the-LiveKit-A_1771517722822.txt  Pasted--title-Build-Your-First-Voice-Agent-using-LiveKit-descr_1771542724981.txt  Pasted-A-7-Day-Diagnosis-Action-Plan-is-a-rapid-response-proto_1771507591809.txt  Pasted-Alright-Deepak-let-s-fix-this-properly-Right-now-your-a_1771518744406.txt  Pasted-Build-a-full-stack-web-application-called-KhetSathi-AI-_1771496033578.txt  Pasted-Hello-Welcome-to-KhetSathi-your-AI-Crop-Doctor-I-ve-see_1771508332371.txt  Pasted-Here-are-the-mandatory-questions-a-specialist-should-as_1771507019254.txt  Pasted-Here-s-the-current-user-flow-it-s-a-4-step-wizard-Step-_1771525385222.txt  Pasted-import-os-import-json-from-dotenv-import-load-dotenv-lo_1771521151944.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: diagnosis-card.tsx  treatment-plan.tsx  voice-chat.tsx  voice-guide-button.tsx
client/src/hooks/: useVoiceGuide.ts
client/src/pages/: history.tsx  home.tsx  kiosk-preview.tsx
livekit_agent/: agent.py
server/: index.ts  livekit-agent.ts  routes.ts  storage.ts  voice-handler.ts
server/services/: chatService.ts  diseaseService.ts  dynamoService.ts  geminiService.ts  pdfService.ts  s3Service.ts  voiceService.ts
shared/: schema.ts
