[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=1.4.2",
    "livekit-plugins-google>=1.4.2",
    "livekit-plugins-sarvam>=1.4.2",
    "livekit-plugins-silero>=1.4.2",
    "python-dotenv>=1.2.1",
]
